[package]
name = "email"
version = "0.1.0"
edition = "2024"

[dependencies]
google-gmail1 = "*"
serde = "1"
serde_json = "1"
oauth2 = {version = "5.0.0", features = ["reqwest-blocking"]}
open = "5.3.2"
reqwest = {version = "0.12.23", features = ["blocking", "json"]}
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
